# ibl-alignment-gui

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: documentation.yml
docs/source/: api.rst  conf.py  data_preparation.rst  developer_guide.rst  getting_started.rst  index.rst  installation.rst  multi_shank.rst  plugins.rst  usage.rst
ibl_alignment_gui/app/: app_controller.py  app_view.py  ibl.py  main.py  shank_controller.py  shank_view.py
ibl_alignment_gui/handlers/: alignment_handler.py  probe_handler.py  shank_handler.py
ibl_alignment_gui/loaders/: alignment_loader.py  alignment_uploader.py  data_loader.py  geometry_loader.py  histology_loader.py  plot_loader.py
ibl_alignment_gui/plugins/: add_plugins.py  additional_plots.py  auto_align.py  c4_database.py  channel_prediction.py  cluster_features.py  datoviz_3d.py  ephys_features.py  features_3d.py  qc_dialog.py  range_controller.py  upload_dialog.py
ibl_alignment_gui/plugins/ephys_atlas/: inference.py  spatial_encoder.py
ibl_alignment_gui/utils/: parse_yaml.py  utils.py
ibl_alignment_gui/utils/qt/: adapted_axis.py  custom_widgets.py  qrange_slider.py
tests/handlers/: test_alignment_handler.py  test_shank_handler.py
tests/loaders/: test_alignment_loader.py  test_alignment_uploader.py  test_data_loader.py
